<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>pt.intro.java.course</groupId>
    <artifactId>CourseJavaIntro</artifactId>
    <version>0.0.1-alpha_build1</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>23</maven.compiler.release>
        <exec.mainClass>pt.intro.java.CourseJavaInto</exec.mainClass>
    </properties>
    <name>CourseJavaIntro</name>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                
                <configuration>
                    <fork>true</fork>
                    <source>23</source>
                    <target>23</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                        <arg>-Xlint:all</arg>
                    </compilerArgs>
                    <!--for unmappable characters in classes-->
                    <encoding>UTF-8</encoding>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                </configuration>                
                
            </plugin>
        </plugins>
    </build>
    
</project>